k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmorum-ingress
  namespace: cosmorum
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: REPLACE_WITH_YOUR_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
